--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -7,6 +7,7 @@
       href="mailto:{{ contactsInfo.email }}"
       rel="noreferrer"
       target="_blank"
+      aria-label="Email"
       class="hover:text-main-dark-color dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
     >
       <fa-icon [icon]="envelope" size="3x"></fa-icon
@@ -15,6 +16,7 @@
       href="https://instagram.com/{{ contactsInfo.instagram }}"
       rel="noreferrer"
       target="_blank"
+      aria-label="Instagram"
       class="hover:text-main-dark-color dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
       ><fa-icon [icon]="instagram" size="3x"></fa-icon
     ></a>
@@ -22,6 +24,7 @@
       href="https://twitter.com/{{ contactsInfo.twitter }}"
       rel="noreferrer"
       target="_blank"
+      aria-label="Twitter"
       class="hover:text-main-dark-color dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
       ><fa-icon [icon]="twitter" size="3x"></fa-icon
     ></a>
@@ -29,6 +32,7 @@
       href="{{ contactsInfo.linkedinURL }}"
       rel="noreferrer"
       target="_blank"
+      aria-label="LinkedIn"
       class="hover:text-main-dark-color dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
       ><fa-icon [icon]="linkedin" size="3x"></fa-icon
     ></a>
@@ -36,6 +40,7 @@
       href="https://github.com/{{ contactsInfo.github }}"
       rel="noreferrer"
       target="_blank"
+      aria-label="GitHub"
       class="hover:text-main-dark-color dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
       ><fa-icon [icon]="github" size="3x"></fa-icon
     ></a>
@@ -43,6 +48,7 @@
       href="https://gitlab.com/{{ contactsInfo.gitlab }}"
       rel="noreferrer"
       target="_blank"
+      aria-label="GitLab"
       class="hover:text-main-dark-color dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
       ><fa-icon [icon]="gitlab" size="3x"></fa-icon
     ></a>
