--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -7,6 +7,7 @@
     class="rounded-full w-72 h-72 aspect-square"
     loading="eager"
     fetchpriority="high"
+    alt="My profile picture"
   />
   <h2 class="font-light text-7xl">
     Hello, my name is
