--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,6 +24,7 @@
     <a
       class="py-1 px-0 hover:border-b-4 border-secondary-light-color transition-all ease-in"
       href="https://blog.chavyv.xyz/"
+      aria-label="Chavyv Blog"
       target="_blank"
       rel="noreferrer"
     >
