--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -9,9 +9,11 @@
             width: {{ skill.percentage }}%; 
             background-color: {{ skill.color.hex }};
           "
-          class="text-right text-white py-px"
+          class="text-right py-px"
         >
-          {{ skill.percentage }}%
+          <span class="text-white bg:dark-charcoal"
+            >{{ skill.percentage }}%</span
+          >
         </div>
       </div>
       <p class="text-left">
