Modify text contrast skills section

--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -11,9 +11,9 @@
           "
           class="text-right py-px"
         >
-          <span class="text-white bg:dark-charcoal"
-            >{{ skill.percentage }}%</span
-          >
+          <span class="text-white font-medium bg-black">
+            {{ skill.percentage }}%
+          </span>
         </div>
       </div>
       <p class="text-left">
