Revamp some design

--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -8,7 +8,7 @@
       rel="noreferrer"
       target="_blank"
       aria-label="Email"
-      class="hover:text-main-dark-color dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
+      class="hover:text-main-dark-color hover:scale-110 dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
     >
       <fa-icon [icon]="envelope" size="3x"></fa-icon
     ></a>
@@ -17,7 +17,7 @@
       rel="noreferrer"
       target="_blank"
       aria-label="Instagram"
-      class="hover:text-main-dark-color dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
+      class="hover:text-main-dark-color hover:scale-110 dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
       ><fa-icon [icon]="instagram" size="3x"></fa-icon
     ></a>
     <a
@@ -25,7 +25,7 @@
       rel="noreferrer"
       target="_blank"
       aria-label="Twitter"
-      class="hover:text-main-dark-color dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
+      class="hover:text-main-dark-color hover:scale-110 dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
       ><fa-icon [icon]="twitter" size="3x"></fa-icon
     ></a>
     <a
@@ -33,7 +33,7 @@
       rel="noreferrer"
       target="_blank"
       aria-label="LinkedIn"
-      class="hover:text-main-dark-color dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
+      class="hover:text-main-dark-color hover:scale-110 dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
       ><fa-icon [icon]="linkedin" size="3x"></fa-icon
     ></a>
     <a
@@ -41,7 +41,7 @@
       rel="noreferrer"
       target="_blank"
       aria-label="GitHub"
-      class="hover:text-main-dark-color dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
+      class="hover:text-main-dark-color hover:scale-110 dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
       ><fa-icon [icon]="github" size="3x"></fa-icon
     ></a>
     <a
@@ -49,7 +49,7 @@
       rel="noreferrer"
       target="_blank"
       aria-label="GitLab"
-      class="hover:text-main-dark-color dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
+      class="hover:text-main-dark-color hover:scale-110 dark:hover:text-main-light-color transition-all ease-in mx-4 my-2"
       ><fa-icon [icon]="gitlab" size="3x"></fa-icon
     ></a>
   </div>
