--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     Made with ❤,
     <a
       href="https://tailwindcss.com/"
-      class="text-secondary-dark-color font-bold"
+      class="text-secondary-dark-color font-bold hover:text-white"
       rel="noreferrer"
       target="_blank"
     >
@@ -11,7 +11,7 @@
     >,
     <a
       href="https://angular.io/"
-      class="text-secondary-dark-color font-bold"
+      class="text-secondary-dark-color font-bold hover:text-white"
       rel="noreferrer"
       target="_blank"
     >
@@ -19,7 +19,7 @@
     >, &
     <a
       href="https://scully.io/"
-      class="text-secondary-dark-color font-bold"
+      class="text-secondary-dark-color font-bold hover:text-white"
       rel="noreferrer"
       target="_blank"
     >
@@ -27,7 +27,7 @@
     >, Hosted in
     <a
       href="https://vercel.com/"
-      class="text-secondary-dark-color font-bold"
+      class="text-secondary-dark-color font-bold hover:text-white"
       rel="noreferrer"
       target="_blank"
     >
@@ -35,7 +35,7 @@
     >, Source available on
     <a
       href="https://github.com/akbar2habibullah/chavyv-xyz-angular"
-      class="text-secondary-dark-color font-bold"
+      class="text-secondary-dark-color font-bold hover:text-white"
       rel="noreferrer"
       target="_blank"
     >
