--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,8 +1,10 @@
 <section class="space-y-4 mb-10">
   <h2 class="text-3xl font-medium">My Technical Skills :</h2>
-
-  <div *ngFor="let skill of skills" class="space-y-4">
-    <div>
+  <div class="space-y-4 px-4">
+    <div
+      *ngFor="let skill of skills"
+      class="hover:scale-105 transition-all ease-in"
+    >
       <div class="w-100 bg-[#ddd]">
         <div
           style="
