--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -26,7 +26,7 @@
     href="{{ resumeLink }}"
     rel="noreferrer"
     target="_blank"
-    class="px-3 py-1.5 font-normal text-base rounded text-main-light-color dark:text-dark-charcoal bg-secondary-dark-color hover:text-secondary-dark-color dark:hover:text-secondary-dark-color hover:bg-transparent transition-all ease-in"
-    >Get my Resume</a
+    class="px-3 py-1.5 font-medium text-base rounded hover:scale-110 text-main-light-color dark:text-dark-charcoal bg-secondary-dark-color hover:text-secondary-dark-color dark:hover:text-secondary-dark-color hover:bg-transparent transition-all ease-in"
+    >> Get my Resume</a
   >
 </div>
