Fix first load mobile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<body [ngClass]="{ dark: isDarkEnabled }" class="text-center w-screen">
+<body class="w-screen">
   <main
     class="h-full w-full text-main-dark-color bg-main-light-color dark:text-main-light-color dark:bg-dark-charcoal transition-all ease-in duration-200"
   >
