Enable custom build

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,18 +6,21 @@
     <a
       class="py-1 px-0 hover:border-b-4 border-secondary-light-color transition-all ease-in"
       href="/#timeline"
+      aria-label="Timeline"
     >
       Timeline
     </a>
     <a
       class="py-1 px-0 hover:border-b-4 border-secondary-light-color transition-all ease-in"
       href="/#projects"
+      aria-label="Projects"
     >
       Projects
     </a>
     <a
       class="py-1 px-0 hover:border-b-4 border-secondary-light-color transition-all ease-in"
       href="/#contacts"
+      aria-label="Contacts"
     >
       Contacts
     </a>
