--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -4,7 +4,7 @@
 >
   <img
     src="{{ image }}"
-    class="rounded-full w-72 h-72 aspect-square"
+    class="rounded-full w-[270px] h-[270px] aspect-square"
     loading="eager"
     fetchpriority="high"
     alt="My profile picture"
