--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,6 +6,7 @@
       class="text-secondary-dark-color font-bold hover:text-white"
       rel="noreferrer"
       target="_blank"
+      aria-label="Tailwind CSS"
     >
       Tailwind</a
     >,
@@ -14,6 +15,7 @@
       class="text-secondary-dark-color font-bold hover:text-white"
       rel="noreferrer"
       target="_blank"
+      aria-label="Angular"
     >
       Angular</a
     >, &
@@ -22,6 +24,7 @@
       class="text-secondary-dark-color font-bold hover:text-white"
       rel="noreferrer"
       target="_blank"
+      aria-label="Scully"
     >
       Scully</a
     >, Hosted in
@@ -30,6 +33,7 @@
       class="text-secondary-dark-color font-bold hover:text-white"
       rel="noreferrer"
       target="_blank"
+      aria-label="Vercel"
     >
       Vercel</a
     >, Source available on
@@ -38,6 +42,7 @@
       class="text-secondary-dark-color font-bold hover:text-white"
       rel="noreferrer"
       target="_blank"
+      aria-label="GitHub"
     >
       GitHub
     </a>
