Migrate to Cloudflare pages

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -29,13 +29,13 @@
       Scully</a
     >, Hosted in
     <a
-      href="https://vercel.com/"
+      href="https://pages.cloudflare.com/"
       class="text-secondary-dark-color font-bold hover:text-white"
       rel="noreferrer"
       target="_blank"
-      aria-label="Vercel"
+      aria-label="Cloudflare"
     >
-      Vercel</a
+      Cloudflare</a
     >, Source available on
     <a
       href="https://github.com/akbar2habibullah/chavyv-xyz-angular"
