--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="md:flex items-center justify-between mb-8">
+<header class="md:flex items-center justify-between mt-12 mb-8">
   <h1 class="mb-2 md:mb-0 font-medium text-3xl">Chavyv.Akvar</h1>
   <nav
     class="py-1 px-0 space-x-4 font-bold justify-center text-secondary-dark-color"
