--- a/src/app/components/top-line/top-line.component.html
+++ b/src/app/components/top-line/top-line.component.html
@@ -1,3 +1,13 @@
 <div
-  class="absolute inset-0 h-1 w-screen bg-secondary-light-color dark:bg-secondary-dark-color"
-></div>
+  class="absolute inset-0 h-10 py-1 md:h-12 md:py-2 w-screen bg-secondary-light-color dark:bg-secondary-dark-color"
+>
+  <a
+    href="https://youtu.be/ssKgjqJsZKw"
+    rel="noreferrer"
+    target="_blank"
+    aria-label="YouTube"
+    class="font-bold h-full text-base md:text-xl hover:text-dark-charcoal"
+  >
+    Hi, I already start my YouTube Channel! 😎
+  </a>
+</div>
