add lazy load yt

--- a/src/app/components/top-line/top-line.component.html
+++ b/src/app/components/top-line/top-line.component.html
@@ -6,7 +6,7 @@
     rel="noreferrer"
     target="_blank"
     aria-label="YouTube"
-    class="font-bold h-full text-base md:text-xl hover:text-dark-charcoal"
+    class="font-bold h-full text-base md:text-xl hover:text-dark-charcoal bg-black hover:bg-transparent"
   >
     Hi, I already start my YouTube Channel! 😎
   </a>
