--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -8,7 +8,8 @@
       width="560"
       height="315"
       src="https://www.youtube.com/embed/ssKgjqJsZKw"
-      title="YouTube video player"
+      title="Chavyv Akvar Introduction 😎"
+      srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/ssKgjqJsZKw?autoplay=1><img src=https://img.youtube.com/vi/ssKgjqJsZKw/hqdefault.jpg alt='Chavyv Akvar Introduction 😎'><span>▶</span></a>"
       frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       allowfullscreen
