--- a/src/app/components/cover/cover.component.html
+++ b/src/app/components/cover/cover.component.html
@@ -1,9 +1,9 @@
 <section id="home" class="my-32 md:my-36 lg:my-40">
-  <p class="font-light text-xl md:text-2xl">Kalem, idealis, suka begadang</p>
+  <p class="font-light text-xl md:text-2xl">Kalem, Idealis, Suka Begadang</p>
   <h2
     class="text-4xl max-w-sm md:max-w-xl lg:max-w-2xl mx-auto font-bold md:text-5xl mb-10 mt-3"
   >
-    Unique person, with all his question about the world
+    A unique blend of Egocentric, Introspective, and inquisitive individuals. A person with all his questions about the world :D
   </h2>
   <a
     href="/#resume"
