--- a/src/app/components/cover/cover.component.html
+++ b/src/app/components/cover/cover.component.html
@@ -3,7 +3,7 @@
   <h2
     class="text-4xl max-w-sm md:max-w-xl lg:max-w-2xl mx-auto font-bold md:text-5xl mb-10 mt-3"
   >
-    Egocentric, Introspective, and inquisitive individuals
+    Egocentric, Introspective, and Inquisitive Individuals
   </h2>
   <a
     href="/#resume"
