--- a/src/app/components/top-line/top-line.component.html
+++ b/src/app/components/top-line/top-line.component.html
@@ -5,7 +5,7 @@
     href="https://youtu.be/ssKgjqJsZKw"
     rel="noreferrer"
     target="_blank"
-    aria-label="My YouTube Link"
+    aria-label="YouTube Link"
     class="font-bold h-full text-base md:text-xl hover:text-dark-charcoal bg-black hover:bg-transparent"
   >
     Hi, I already start my YouTube Channel! 😎
