--- a/src/app/components/top-line/top-line.component.html
+++ b/src/app/components/top-line/top-line.component.html
@@ -2,12 +2,12 @@
   class="absolute inset-0 h-10 py-1 md:h-12 md:py-2 w-screen bg-secondary-light-color dark:bg-secondary-dark-color"
 >
   <a
-    href="https://youtu.be/ssKgjqJsZKw"
+    href="https://discord.gg/kYmGmExs9t"
     rel="noreferrer"
     target="_blank"
-    aria-label="YouTube Link"
+    aria-label="Discord Link"
     class="font-bold h-full text-base md:text-xl hover:text-dark-charcoal bg-black hover:bg-transparent"
   >
-    Hi, I already start my YouTube Channel! 😎
+    Join our Discord Server! 🙌
   </a>
 </div>
